--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,11 @@ services:
       - .:/app
     depends_on:
       - db
-    command: ./start.sh
+    command: > 
+            bash -c "python manage.py wait_for_db &&
+                    python manage.py makemigrations &&
+                    python manage.py migrate &&
+                    python manage.py runserver 0.0.0.0:8000" 
 
   db:
     image: postgres:latest
